# ppr-pec

./: CMakeLists.txt  Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  GameCommunication.cpp  GameCommunication.h  MPI.cpp  MPI.h  Move.cpp  Move.h  MyMPI.cpp  MyMPI.h  ParallelGame.cpp  ParallelGame.h  ParallelGameCommunication.cpp  ParallelGameCommunication.h  SequentialGame.cpp  SequentialGame.h  input.10m  input.15m  input.20m  main.cpp
report/: report.tex
